--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -65,7 +65,7 @@
             "annual": "Сервисный аккаунт"
         },
         "mine": "Мой аккаунт",
-        "name": "Имя аккаунта",
+        "name": "имя аккаунта",
         "name_input": {
             "account_name_should": "Имя аккаунта должно ",
             "be_longer": "быть длиннее",
@@ -1021,8 +1021,8 @@
             "trx_per_block": "Транзакций/блок",
             "trx_per_sec": "Транзакций/сек",
             "recent_ops": "Недавние операции в блокчейне",
-            "block_hash_title": "Поиск по ID блока или TxID",
-            "enter_hash": "введите хэш",
+            "block_hash_title": "Поиск по ID блока, TxID или имени аккаунта",
+            "enter_hash": "введите хэш или аккаунт",
             "tab_title_01": "Блокчейн",
             "tab_title_02": "Общая история операций",
             "tab_title_03": "Последние блоки"
@@ -1853,7 +1853,7 @@
         "deposit_to": "Депонировано на аккаунт",
         "expiration": "Истекает",
         "feed_price": "Цена по котировке",
-        "from": "от кого",
+        "from": "От кого",
         "funding_account": "Аккаунт финансирования",
         "global_parameters_update": "Обновил глобальные параметры",
         "inputs": "Входы",
@@ -1868,7 +1868,7 @@
         "seller": "Продавец",
         "sent": "отправлено",
         "settlement_date": "Дата погашения",
-        "to": "кому",
+        "to": "Кому",
         "transaction_confirmed": "Транзакция подтверждена",
         "trxTypes": {
             "account_create": "Создание аккаунта",
@@ -2571,8 +2571,9 @@
         },
         "footer": {
             "description": "это децентрализованная платформа с открытым исходным кодом, на основе блокчейна CrowdWiz, которая использует феномен Wisdom of the Crowd для принятия решений и самоуправления.",
-            "link_news": "Новости",
             "link_docs": "Docs",
+            "white_paper": "White paper",
+            "audit": "Audit",
             "link_dev": "Разработчикам"
         }
     },
